fix: fix color contrast in footer in light mode for a11y

--- a/style.css
+++ b/style.css
@@ -74,10 +74,6 @@ main > section:first-child {
   margin-top: -2em;
 }
 
-footer {
-  color: gray;
-}
-
 .instructions > li {
   padding-bottom: 2rem;
 }
